# ShaderNinja

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
dependencies/SOIL2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  soil2.sln  soil2.vcxproj  soil2.vcxproj.filters
dependencies/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  glad.sln  glad.vcxproj  glad.vcxproj.filters
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters
dependencies/glfw/docs/html/: jquery.js
dependencies/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
dependencies/glm/: CMakeLists.txt
dependencies/glm/glm/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  glm.vcxproj  glm.vcxproj.filters
dependencies/imgui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  imgui.sln  imgui.vcxproj  imgui.vcxproj.filters
dependencies/stb_image/: CMakeLists.txt
documentation/: ShaderNinja-Documentation.md
include/: Common.h  InputManager.h  Primitive.h  ScreenUtils.h  Texture.h  TimeManager.h  Transform.h  Utils.h  shaderStream.h
include/Core/: BufferManager.h  InputManager.h  TimeManager.h
include/Game/: GameObject.h
include/Graphics/: Mesh.h  Primitive.h  ShaderManager.h
include/Scene/: Camera.h
include/Utilities/: CommonIncludes.h  Utils.h
resources/: fragmentShader.glsl  vertexShader.glsl
resources/shaders/: fragmentShader.glsl  vertexShader.glsl
src/: InputManager.cpp  Primitive.cpp  Texture.cpp  TimeManager.cpp  Utils.cpp  main.cpp
src/Core/: BufferManager.cpp  BufferManager.h  InputManager.cpp  InputManager.h  TimeManager.cpp  TimeManager.h
src/Debug/: ImguiManager.cpp  ImguiManager.h
src/GUI/: ImguiManager.cpp
src/Graphics/: Material.h  Mesh.cpp  OBJModelImporter.cpp  OBJModelImporter.h  Primitive.cpp  Primitive.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h
src/Physics/: Transform.h
src/Scene/: Camera.cpp  Camera.h
src/Utilities/: CommonIncludes.h  ScreenUtils.h  Utils.cpp
